refactor(tenant): 统一合约与集成边界，补齐 reactive 与 healthcheck 测试